# deep_technical_investing

./: .gitignore  LICENSE  README.md  db.db  deep_technical_investing_ai.py  deep_technical_investing_web_front.py  find_historic_performance.py  get_data.py  init_db.py  portfolio_performance.xlsx  pyproject.toml  requirements.txt  ticker_dataframe.xlsx  train_ai.py  web_app.py
resources/: aapl.csv
views/: index.tpl
