[tool.poetry]
name = "deep_technical_investing"
version = "0.1.0"
description = ""
authors = ["Maurycy Blaszczak <mgblaszczak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.2"
mplfinance = "^0.12.7-alpha.5"
fastai = "^2.2.5"
bottle = "^0.12.19"
fastbook  = "^0.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
